[package]
name = "async-openai-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.0"
dotenvy = "0.15.7"
futures = "0.3.31"
rand = "0.9.2"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
