[package]
name = "llm-workshop"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
